manifests/ingress/ingress-sonar.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: sonar.lkdlas.icu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonar-svc
                port:
                  number: 9000
    - host: grafana.lkdlas.icu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana 
                port:
                  number: 3000
